# openstack-ansible-openstack_openrc

./: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst
examples/: playbook.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: main.yml
templates/: clouds.yaml.j2  openrc-system-scope.j2  openrc.j2
tests/: test.yml
zuul.d/: project.yaml
